# mcp_demo

./: .env.example  .gitignore  README.md  README_CN.md  calculator.py  file_manager.py  mcp_tutorial.md  pyproject.toml  refer.md  requirements.txt  run_client.py  run_servers.py  template.md  test_mcp_client.py  test_mcp_sse_client.py  weather_service.py
client/: MCP_CLIENT_README.md  README_CN.md  mcp_client_demo.py  servers_config.json
server/: README.md  README_CN.md  calculator.py  calculator_sse.py
