[project]
name = "mcp-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.10.0",
]

[tool.setuptools]
py-modules = [
    "calculator",
    "file_manager",
    "main",
    "run_servers",
    "weather_service"
]
